bkp-config/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
00:02:12 **** Build of configuration release for project simulator ****
make MODE=release all 
FullNode.cpp
baseMessage_m.cpp
updateFulfillHTLC_m.cpp
Creating executable: out/gcc-release//simulator
00:05:37 **** Incremental Build of configuration release for project simulator ****
make MODE=release all 
FullNode.cpp
baseMessage_m.cpp
updateFulfillHTLC_m.cpp
Creating executable: out/gcc-release//simulator
00:09:25 **** Incremental Build of configuration release for project simulator ****
make MODE=release all 
FullNode.cpp
baseMessage_m.cpp
updateFulfillHTLC_m.cpp
Creating executable: out/gcc-release//simulator
00:09:30 **** Incremental Build of configuration release for project simulator ****
make MODE=release all 
make: Nothing to be done for 'all'.
00:09:31 **** Incremental Build of configuration release for project simulator ****
make MODE=release all 
make: Nothing to be done for 'all'.
00:14:51 **** Incremental Build of configuration release for project simulator ****
make MODE=release all 
FullNode.cpp
FullNode.cpp: In member function ‘virtual void FullNode::refreshDisplay() const’:
FullNode.cpp:646:32: error: ‘it’ was not declared in this scope; did you mean ‘int’?
  646 |     std::string neighborName = it.first;
      |                                ^~
      |                                int
make: *** [Makefile:129: out/gcc-release//FullNode.o] Error 1
"make MODE=release all" terminated with exit code 2. Build might be incomplete.
00:15:24 **** Incremental Build of configuration release for project simulator ****
make MODE=release all 
FullNode.cpp
FullNode.cpp: In member function ‘virtual void FullNode::refreshDisplay() const’:
FullNode.cpp:650:33: error: ‘const class PaymentChannel’ has no member named ‘getLocalGate’
  650 |         cGate *gate = it.second.getLocalGate();
      |                                 ^~~~~~~~~~~~
FullNode.cpp:652:17: error: ‘buf’ was not declared in this scope
  652 |         sprintf(buf, "%0.1f\n", capacity);
      |                 ^~~
make: *** [Makefile:129: out/gcc-release//FullNode.o] Error 1
"make MODE=release all" terminated with exit code 2. Build might be incomplete.
00:25:32 **** Incremental Build of configuration release for project simulator ****
make MODE=release all 
crypto.cpp
FullNode.cpp
netBuilder.cpp
PaymentChannel.cpp
payment_m.cpp
Creating executable: out/gcc-release//simulator
00:34:44 **** Incremental Build of configuration release for project simulator ****
make MODE=release all 
make: Nothing to be done for 'all'.
00:38:27 **** Incremental Build of configuration release for project simulator ****
make MODE=release all 
make: Nothing to be done for 'all'.
00:42:33 **** Incremental Build of configuration release for project simulator ****
make MODE=release all 
make: Nothing to be done for 'all'.
00:44:34 **** Incremental Build of configuration release for project simulator ****
make MODE=release all 
make: Nothing to be done for 'all'.
